# amira_blender_rendering

./: .clang-format  .flake8  .gitignore  .style.yapf  3rd-party-licenses.md  404.html  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  NOTICE  README.md  Readme.md  TODO.md  TODO.rst  index.html  mkdocs.yml  package.xml  requirements.txt  setup.py  sitemap.xml  virtualenv.cfg
.config/: clang-format  cpplint
ABR_Datasets_API/: Makefile  README.md  convert_to_PASCAL_VOC_format.py  requirements.txt  setup.py
config/: pandatable_don.cfg  pandatable_example.cfg  render_clutteredpandatable.cfg  render_clutteredpandatable_letterb.cfg  render_clutteredpandatable_multiobjects.cfg  render_clutteredpandatable_toolcap.cfg  render_letterb.cfg  render_pandatable.cfg  render_toolcap.cfg  render_toolcap_viewsphere.cfg  single_object_toolcap_example.cfg  toolcap_train.cfg  workstation_multiview.cfg  workstation_scenario01.cfg  workstation_scenario01_multiview_train.cfg  workstation_scenario01_test.cfg  workstation_scenario01_train.cfg  workstation_scenario_ABC.cfg  workstation_scenarios.cfg
contributing/: index.html
datasets/: index.html
docker/: Dockerfile
docs/: conf.py  contributing.md  contributing.rst  datasets.md  datasets.rst  extending.rst  faq.rst  formats.md  formats.rst  fqa.md  fqa.rst  index.md  index.rst  installation.md  installation.rst  license.md  license.rst  tests.md  tests.rst  troubleshooting.md  troubleshooting.rst  using.md  using.rst
formats/: index.html
fqa/: index.html
installation/: index.html
license/: index.html
scripts/: README.md  (+15 more)
(+207 files in other folders)
