<?xml version="1.0"?>
<package format="2">
  <name>amira_blender_rendering</name>
  <version>0.0.0</version>
  <description>Tools for animating a blender robot model</description>

  <maintainer email="Yoel.Shapiro@il.bosch.com">yoel_shapiro</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>bpy</depend>

</package>
